Fix bug on iPhone where overflow is visible and increase browser support

--- a/style.css
+++ b/style.css
@@ -1,13 +1,34 @@
+html {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-size: 1.1em;
   font-family: 'IBM Plex Serif', Cambria, Cochin, Georgia, Times, serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  box-orient: vertical;
+  box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  box-pack: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   height: 100vh;
+  width: 100vw;
+  position: relative;
   overflow: hidden;
+  -webkit-transition: color 0.5s ease;
+  -o-transition: color 0.5s ease;
   transition: color 0.5s ease;
 }
 
@@ -43,7 +64,9 @@ a:visited:hover {
   position: absolute;
   border-radius: 50%;
   pointer-events: none;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
   transform: translateZ(0);
   z-index: 5;
 }
@@ -65,6 +88,9 @@ a:visited:hover {
 .theme-toggle svg {
   width: 1.8em;
   height: 1.8em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
   position: relative;
   z-index: 10;
@@ -72,6 +98,8 @@ a:visited:hover {
 
 .theme-toggle__path {
   fill: #000;
+  -webkit-transition: fill 0.5s ease;
+  -o-transition: fill 0.5s ease;
   transition: fill 0.5s ease;
 }
 
@@ -81,6 +109,8 @@ a:visited:hover {
 
 .theme-toggle__circle {
   stroke: #000;
+  -webkit-transition: stroke 0.5s ease;
+  -o-transition: stroke 0.5s ease;
   transition: stroke 0.5s ease;
 }
 
@@ -112,9 +142,9 @@ a:visited:hover {
 @media (max-width: 30em) {
   body {
     font-size: 0.9em;
-    padding: 1em;
-    margin-top: 0;
-    height: 100vh;
+  }
+  .about {
+    padding: 1em 2em;
   }
   h1 {
     font-size: 1.7em;
